スタイル修正0518

--- a/app/index.html
+++ b/app/index.html
@@ -11,7 +11,7 @@
   <div class="cursor"></div>
   <div class="mask">
     <div class="accordion-list">
-      <a class="accordion-list__link" href="/works/index.html">
+      <a class="accordion-list__link" href="/">
         <span class="accordion-list__text fadein-under">01</span>
         <span class="accordion-list__text--primary fadein-under">WORKS</span>
         <span class="accordion-list__text fadein-under">SOME CASE</span>
@@ -36,9 +36,11 @@
   </div>
 
   <header class="header">
-    <h1 class="header__h1">
-      MEI NAKAMURA PORTFOLIO
-    </h1>
+    <a href="/">
+      <h1 class="header__h1">
+        MEI NAKAMURA PORTFOLIO
+      </h1>
+    </a>
     <div class="menu-icon">
       <span class="menu-icon__bar"></span>
       <span class="menu-icon__bar"></span>
@@ -48,12 +50,12 @@
   <main class="main">
     <div class="sidemenu sidemenu--fix">
         <span class="sidemenu__link">
-          <a class="sidemenu__text active" href="/works/index.html">WORKS</a>
+          <span class="sidemenu__text active">WORKS</span>
         </span>
         <span class="sidemenu__link">
-          <a class="sidemenu__text-min active" href="/works/index.html">WEB DESIGN</a>
-          <a class="sidemenu__text-min" href="/works/award.html">LOGO / ILLUSTRATION</a>
-          <a class="sidemenu__text-min" href="/works/namecard.html">VISUAL DESIGN</a>
+          <span class="sidemenu__text-min active">WEB DESIGN</span>
+          <span class="sidemenu__text-min">LOGO / ILLUSTRATION</span>
+          <span class="sidemenu__text-min">VISUAL DESIGN</span>
         </span>
         <span class="sidemenu__link active">
           <a class="sidemenu__text" href="/about.html">ABOUT</a>
@@ -62,9 +64,11 @@
     <div class="main-fix">
       <div class="top-visual">
         <div class="top-visual__inner">
-          <img class="top-visual__img" src="./assets/images/pc_pie.jpg" alt="メインのパイの実画像">
-          <div class="top-visual__link" href="/works/index.html">
-            <a class="visual-link">
+          <a href="/works/">
+            <img class="top-visual__img" src="./assets/images/pc_pie.jpg" alt="メインのパイの実画像">
+          </a>
+          <div class="top-visual__link">
+            <a class="visual-link" href="/works/index.html">
               <span class="visual-link__text--grey">WEB</span>
               <span class="visual-link__text">LOTTE パイの実 BRAND SITE</span>
             </a>
@@ -73,9 +77,11 @@
       </div>
       <div class="top-visual">
         <div class="top-visual__inner">
-          <img class="top-visual__img" src="./assets/images/pc_look_apr.png" alt="MAQuillAGE　LOOKBOOK画像">
-          <div class="top-visual__link" href="/works/look_apr.html">
-            <a class="visual-link">
+          <a href="/works/look_apr.html">
+            <img class="top-visual__img" src="./assets/images/pc_look_apr.png" alt="MAQuillAGE　LOOKBOOK画像">
+          </a>
+          <div class="top-visual__link">
+            <a class="visual-link" href="/works/look_apr.html">
               <span class="visual-link__text--grey">WEB</span>
               <span class="visual-link__text">MAQuillAGE　LOOKBOOK</span>
             </a>
@@ -84,9 +90,11 @@
       </div>
       <div class="top-visual">
         <div class="top-visual__inner">
-          <img class="top-visual__img" src="./assets/images/pc_look_feb.png" alt="MAQuillAGE　LOOKBOOK画像">
-          <div class="top-visual__link" href="/works/look_feb.html">
-            <a class="visual-link">
+          <a href="/works/look_feb.html">
+            <img class="top-visual__img" src="./assets/images/pc_look_feb.png" alt="MAQuillAGE　LOOKBOOK画像">
+          </a>
+          <div class="top-visual__link">
+            <a class="visual-link" href="/works/look_feb.html">
               <span class="visual-link__text--grey">WEB</span>
               <span class="visual-link__text">MAQuillAGE　LOOKBOOK</span>
             </a>
@@ -95,9 +103,11 @@
       </div>
       <div class="top-visual">
         <div class="top-visual__inner">
-          <img class="top-visual__img" src="./assets/images/pc_q16.png" alt="Q16GiRL画像">
-          <div class="top-visual__link" href="/works/q16.html">
-            <a class="visual-link">
+          <a href="/works/q16.html">
+            <img class="top-visual__img" src="./assets/images/pc_q16.png" alt="Q16GiRL画像">
+          </a>
+          <div class="top-visual__link">
+            <a class="visual-link" href="/works/q16.html">
               <span class="visual-link__text--grey">WEB</span>
               <span class="visual-link__text">Q16GiRL</span>
             </a>
@@ -106,9 +116,11 @@
       </div>
       <div class="top-visual">
         <div class="top-visual__inner">
-          <img class="top-visual__img" src="./assets/images/pc_bvlgari.png" alt="LINE  MOOK in PINK HAPPY SECRET by BVLGARI画像">
-          <div class="top-visual__link" href="/works/bvlgari.html">
-            <a class="visual-link">
+          <a href="/works/bvlgari.html">
+            <img class="top-visual__img" src="./assets/images/pc_bvlgari.png" alt="LINE  MOOK in PINK HAPPY SECRET by BVLGARI画像">
+          </a>
+          <div class="top-visual__link">
+            <a class="visual-link" href="/works/bvlgari.html">
               <span class="visual-link__text--grey">WEB</span>
               <span class="visual-link__text">
                 LINE MOOK "in PINK HAPPY <br>
@@ -121,9 +133,11 @@
       </div>
       <div class="top-visual">
         <div class="top-visual__inner">
-          <img class="top-visual__img" src="./assets/images/pc_itrim.png" alt="itrim画像">
-          <div class="top-visual__link" href="/works/itrim.html">
-            <a class="visual-link">
+          <a href="/works/itrim.html">
+            <img class="top-visual__img" src="./assets/images/pc_itrim.png" alt="itrim画像">
+          </a>
+          <div class="top-visual__link">
+            <a class="visual-link" href="/works/itrim.html">
               <span class="visual-link__text--grey">WEB</span>
               <span class="visual-link__text">ITRIM</span>
             </a>
@@ -132,9 +146,11 @@
       </div>
       <div class="top-visual">
         <div class="top-visual__inner">
-          <img class="top-visual__img" src="./assets/images/pc_syncstock.png" alt="syncstock画像">
-          <div class="top-visual__link" href="/works/syncstock.html">
-            <a class="visual-link">
+          <a href="/works/syncstock.html">
+            <img class="top-visual__img" src="./assets/images/pc_syncstock.png" alt="syncstock画像">
+          </a>
+          <div class="top-visual__link">
+            <a class="visual-link" href="/works/syncstock.html">
               <span class="visual-link__text--grey">WEB</span>
               <span class="visual-link__text">syncstock</span>
             </a>
@@ -143,9 +159,11 @@
       </div>
       <div class="top-visual">
         <div class="top-visual__inner">
-          <img class="top-visual__img" src="./assets/images/pc_award.png" alt="INTERNSHIP AWARD画像">
-          <div class="top-visual__link" href="/works/award.html">
-            <a class="visual-link">
+          <a href="/works/award.html">
+            <img class="top-visual__img" src="./assets/images/pc_award.png" alt="INTERNSHIP AWARD画像">
+          </a>
+          <div class="top-visual__link">
+            <a class="visual-link" href="/works/award.html">
               <span class="visual-link__text--grey">LOGO</span>
               <span class="visual-link__text">INTERNSHIP AWARD</span>
             </a>
@@ -154,9 +172,11 @@
       </div>
       <div class="top-visual">
         <div class="top-visual__inner">
-          <img class="top-visual__img" src="./assets/images/pc_amg.png" alt="AMG solution画像">
-          <div class="top-visual__link" href="/works/amg.html">
-            <a class="visual-link">
+          <a href="/works/amg.html">
+            <img class="top-visual__img" src="./assets/images/pc_amg.png" alt="AMG solution画像">
+          </a>
+          <div class="top-visual__link">
+            <a class="visual-link" href="/works/amg.html">
               <span class="visual-link__text--grey">LOGO</span>
               <span class="visual-link__text">AMG solution</span>
             </a>
@@ -165,9 +185,11 @@
       </div>
       <div class="top-visual">
         <div class="top-visual__inner">
-          <img class="top-visual__img" src="./assets/images/pc_rouge.png" alt="MAQuillAGE ルージュミニ画像">
-          <div class="top-visual__link" href="/works/rouge.html">
-            <a class="visual-link">
+          <a href="/works/rouge.html">
+            <img class="top-visual__img" src="./assets/images/pc_rouge.png" alt="MAQuillAGE ルージュミニ画像">
+          </a>
+          <div class="top-visual__link">
+            <a class="visual-link" href="/works/rouge.html">
               <span class="visual-link__text--grey">ILLUSTRATION</span>
               <span class="visual-link__text">MAQuillAGE ルージュミニ</span>
             </a>
@@ -176,9 +198,11 @@
       </div>
       <div class="top-visual">
         <div class="top-visual__inner">
-          <img class="top-visual__img" src="./assets/images/pc_inupathy.png" alt="inupathy画像">
-          <div class="top-visual__link" href="/works/inupathy.html">
-            <a class="visual-link">
+          <a href="/works/inupathy.html">
+            <img class="top-visual__img" src="./assets/images/pc_inupathy.png" alt="inupathy画像">
+          </a>
+          <div class="top-visual__link">
+            <a class="visual-link" href="/works/inupathy.html">
               <span class="visual-link__text--grey">ILLUSTRATION</span>
               <span class="visual-link__text">inupathy</span>
             </a>
@@ -187,9 +211,11 @@
       </div>
       <div class="top-visual">
         <div class="top-visual__inner">
-          <img class="top-visual__img" src="./assets/images/pc_millor.png" alt="MILLOR画像">
-          <div class="top-visual__link" href="/works/millor.html">
-            <a class="visual-link">
+          <a href="/works/millor.html">
+            <img class="top-visual__img" src="./assets/images/pc_millor.png" alt="MILLOR画像">
+          </a>
+          <div class="top-visual__link">
+            <a class="visual-link" href="/works/millor.html">
               <span class="visual-link__text--grey">ILLUSTRATION</span>
               <span class="visual-link__text">MILLOR</span>
             </a>
@@ -198,9 +224,11 @@
       </div>
       <div class="top-visual">
         <div class="top-visual__inner">
-          <img class="top-visual__img" src="./assets/images/pc_namecard.png" alt="名刺">
-          <div class="top-visual__link" href="/works/namecard.html">
-            <a class="visual-link">
+          <a href="/works/namecard.html">
+            <img class="top-visual__img" src="./assets/images/pc_namecard.png" alt="名刺">
+          </a>
+          <div class="top-visual__link">
+            <a class="visual-link" href="/works/namecard.html">
               <span class="visual-link__text--grey">VISUAL</span>
               <span class="visual-link__text">名刺</span>
             </a>
