--- a/app/about.html
+++ b/app/about.html
@@ -11,13 +11,13 @@
   <div class="cursor"></div>
   <div class="mask">
     <div class="accordion-list">
-      <a class="accordion-list__link" href="#">
+      <a class="accordion-list__link" href="/">
         <span class="accordion-list__text fadein-under">01</span>
         <span class="accordion-list__text--primary fadein-under">WORKS</span>
         <span class="accordion-list__text fadein-under">SOME CASE</span>
       </a>
       <div class="border fadein-left off"></div>
-      <a class="accordion-list__link" href="#">
+      <a class="accordion-list__link" href="/about.html">
         <span class="accordion-list__text fadein-under s3">02</span>
         <span class="accordion-list__text--primary fadein-under s3">ABOUT</span>
         <span class="accordion-list__text fadein-under s3">MY PHILOSOPHY</span>
@@ -32,9 +32,11 @@
   </div>
 
   <header class="header">
-    <h1 class="header__h1">
-      MEI NAKAMURA PORTFOLIO
-    </h1>
+    <a href="/">
+      <h1 class="header__h1">
+        MEI NAKAMURA PORTFOLIO
+      </h1>
+    </a>
     <div class="menu-icon">
       <span class="menu-icon__bar"></span>
       <span class="menu-icon__bar"></span>
