スタイル修正0519

--- a/app/about.html
+++ b/app/about.html
@@ -19,7 +19,7 @@
       <div class="border fadein-left off"></div>
       <a class="accordion-list__link" href="/about.html">
         <span class="accordion-list__text fadein-under s3">02</span>
-        <span class="accordion-list__text--primary fadein-under s3">ABOUT</span>
+        <span class="accordion-list__text--primary fadein-under s15">ABOUT</span>
         <span class="accordion-list__text fadein-under s3">MY PHILOSOPHY</span>
       </a>
       <div class="border fadein-left off"></div>
@@ -47,12 +47,12 @@
     <div class="flex-layout">
       <div class="sidemenu flex-layout__side">
         <span class="sidemenu__link" >
-          <a class="sidemenu__text" href="/works/index.html">WORKS</a>
+          <a class="sidemenu__text" href="/">WORKS</a>
         </span>
         <span class="sidemenu__link">
-          <a class="sidemenu__text-min" href="/works/index.html">WEB DESIGN</a>
-          <a class="sidemenu__text-min" href="/works/award.html">LOGO / ILLUSTRATION</a>
-          <a class="sidemenu__text-min" href="/works/namecard.html">VISUAL DESIGN</a>
+          <a class="sidemenu__text-min" href="/">WEB DESIGN</a>
+          <a class="sidemenu__text-min" href="/">LOGO / ILLUSTRATION</a>
+          <a class="sidemenu__text-min" href="/">VISUAL DESIGN</a>
         </span>
         <span class="sidemenu__link active">
           <span class="sidemenu__text active">ABOUT</span>
