--- a/app/works/bvlgari.html
+++ b/app/works/bvlgari.html
@@ -19,7 +19,7 @@
       <div class="border fadein-left off"></div>
       <a class="accordion-list__link" href="/about.html">
         <span class="accordion-list__text fadein-under s3">02</span>
-        <span class="accordion-list__text--primary fadein-under s3">ABOUT</span>
+        <span class="accordion-list__text--primary fadein-under s15">ABOUT</span>
         <span class="accordion-list__text fadein-under s3">MY PHILOSOPHY</span>
       </a>
       <div class="border fadein-left off"></div>
@@ -58,28 +58,34 @@
       </div>
       <div class="flex-wrap">
         <div class="info flex-wrap__item">
-          <span class="info__sub02 fadein">WEB DESIGH</span>
-          <p class="fadein info__title02 fadein">
-            LINE MOOK "in PINK HAPPY <br>
-            SECRET <br>
-            by BVLGARI"</p>
-          <div class="fadein info__btn pc">
-            <a class="black-btn" href="https://lin.ee/gGxdnA8?utm_source=clipboard&utm_medium=share&utm_campaign=none">VISIT WEBSITE</a>
+          <div class="fadein">
+            <span class="info__sub02">WEB DESIGN</span>
+            <p class="info__title02">
+              LINE MOOK "in PINK HAPPY <br>
+              SECRET <br>
+              by BVLGARI"</p>
+          </div>
+          <div class="fadein info__btn pc s6">
+            <a class="black-btn" href="https://lin.ee/gGxdnA8?utm_source=clipboard&utm_medium=share&utm_campaign=none" target="_blank">VISIT WEBSITE</a>
           </div>
         </div>
         <div class="info flex-wrap__item">
-          <p class="fadein info__desc">
-            CLIENT
-            <span class="fadein info__desc--grey">: 婦人画報</span>
-          </p>
-          <div class="dotted-line"></div>
-          <p class="fadein info__desc">DESCRIPTION</p>
-          <div class="dotted-line"></div>
-          <p class="fadein info__text">
-            LINE MOOKという形態でBVLGARI×高橋メアリージュンのサイトデザインを担当しました。LINEでの閲覧に特化したデザインを意識し一画面ごとの見応えやバランス、キャンペーンへの誘導、その他コンテンツの回遊を意識してデザインを行っています。
-          </p>
-          <div class="fadein info__btn sp">
-            <a class="black-btn" href="https://lin.ee/gGxdnA8?utm_source=clipboard&utm_medium=share&utm_campaign=none">VISIT WEBSITE</a>
+          <div class="fadein s3">
+            <p class="info__desc">
+              CLIENT
+              <span class="info__desc--grey">婦人画報</span>
+            </p>
+            <div class="dotted-line"></div>
+          </div>
+          <div class="fadein s45">
+            <p class="info__desc">DESCRIPTION</p>
+            <div class="dotted-line"></div>
+            <p class="info__text">
+              LINE MOOKという形態でBVLGARI×高橋メアリージュンのサイトデザインを担当しました。LINEでの閲覧に特化したデザインを意識し一画面ごとの見応えやバランス、キャンペーンへの誘導、その他コンテンツの回遊を意識してデザインを行っています。
+            </p>
+          </div>
+          <div class="fadein info__btn sp s6">
+            <a class="black-btn" href="https://lin.ee/gGxdnA8?utm_source=clipboard&utm_medium=share&utm_campaign=none" target="_blank">VISIT WEBSITE</a>
           </div>
         </div>
         <div class="flex-wrap__item">
