--- a/app/works/amg.html
+++ b/app/works/amg.html
@@ -19,7 +19,7 @@
       <div class="border fadein-left off"></div>
       <a class="accordion-list__link" href="/about.html">
         <span class="accordion-list__text fadein-under s3">02</span>
-        <span class="accordion-list__text--primary fadein-under s3">ABOUT</span>
+        <span class="accordion-list__text--primary fadein-under s15">ABOUT</span>
         <span class="accordion-list__text fadein-under s3">MY PHILOSOPHY</span>
       </a>
       <div class="border fadein-left off"></div>
@@ -58,27 +58,33 @@
       </div>
       <div class="flex-wrap">
         <div class="info flex-wrap__item">
-          <span class="info__sub02 fadein">LOGO</span>
-          <p class="fadein info__title02 fadein">AMG solution</p>
-          <div class="fadein info__btn pc">
-            <a class="black-btn" href="https://amg-solution.jp/">VISIT WEBSITE</a>
+          <div class="fadein">
+            <span class="info__sub02">LOGO</span>
+            <p class="info__title02">AMG solution</p>
+          </div>
+          <div class="fadein info__btn pc s6">
+            <a class="black-btn" href="https://amg-solution.jp/" target="_blank">VISIT WEBSITE</a>
           </div>
         </div>
         <div class="info flex-wrap__item">
-          <p class="fadein info__desc">
-            CLIENT
-            <span class="fadein info__desc--grey">: AMG solution</span>
-          </p>
-          <div class="dotted-line"></div>
-          <p class="fadein info__desc">DESCRIPTION</p>
-          <div class="dotted-line"></div>
-          <p class="fadein info__text">
-            通信・インフラに携わるAMG
-            solution様のロゴを制作しました。モチーフのDNAは、社員同士やお客様、未来の仲間など、まわりの人たちとのつながりを重ねていくという想いを込めました。大切にしている考え方やこれまでの実績を根幹として、技術の力で良い解決策を積み上げるというチャレンジ精神を表しています。また
-            “ i ” では、AMGと関わる全ての「人」が、DNAとしてつながっている様を描いています。
-          </p>
-          <div class="fadein info__btn sp">
-            <a class="black-btn" href="https://amg-solution.jp/">VISIT WEBSITE</a>
+          <div class="fadein s3">
+            <p class="info__desc">
+              CLIENT
+              <span class="info__desc--grey">AMG solution</span>
+            </p>
+            <div class="dotted-line"></div>
+          </div>
+          <div class="fadein s45">
+            <p class="info__desc">DESCRIPTION</p>
+            <div class="dotted-line"></div>
+            <p class="info__text">
+              通信・インフラに携わるAMG
+              solution様のロゴを制作しました。モチーフのDNAは、社員同士やお客様、未来の仲間など、まわりの人たちとのつながりを重ねていくという想いを込めました。大切にしている考え方やこれまでの実績を根幹として、技術の力で良い解決策を積み上げるというチャレンジ精神を表しています。また
+              “ i ” では、AMGと関わる全ての「人」が、DNAとしてつながっている様を描いています。
+            </p>
+          </div>
+          <div class="fadein info__btn sp s6">
+            <a class="black-btn" href="https://amg-solution.jp/" target="_blank">VISIT WEBSITE</a>
           </div>
         </div>
         <div class="flex-wrap__item">
