--- a/app/works/award.html
+++ b/app/works/award.html
@@ -19,7 +19,7 @@
       <div class="border fadein-left off"></div>
       <a class="accordion-list__link" href="/about.html">
         <span class="accordion-list__text fadein-under s3">02</span>
-        <span class="accordion-list__text--primary fadein-under s3">ABOUT</span>
+        <span class="accordion-list__text--primary fadein-under s15">ABOUT</span>
         <span class="accordion-list__text fadein-under s3">MY PHILOSOPHY</span>
       </a>
       <div class="border fadein-left off"></div>
@@ -58,25 +58,31 @@
       </div>
       <div class="flex-wrap">
         <div class="info flex-wrap__item">
-          <span class="info__sub02 fadein">LOGO</span>
-          <p class="fadein info__title02 fadein">INTERNSHIP AWARD</p>
-          <div class="fadein info__btn pc">
-            <a class="black-btn" href="https://internship-award.jp/">VISIT WEBSITE</a>
+          <div class="fadein">
+            <span class="info__sub02">LOGO</span>
+            <p class="info__title02">INTERNSHIP AWARD</p>
+          </div>
+          <div class="fadein info__btn pc s6">
+            <a class="black-btn" href="https://internship-award.jp/" target="_blank">VISIT WEBSITE</a>
           </div>
         </div>
         <div class="info flex-wrap__item">
-          <p class="fadein info__desc">
-            CLIENT
-            <span class="fadein info__desc--grey">: マイナビ</span>
-          </p>
-          <div class="dotted-line"></div>
-          <p class="fadein info__desc">DESCRIPTION</p>
-          <div class="dotted-line"></div>
-          <p class="fadein info__text">
-            学生の社会的・職業的自立に貢献したインターンシッププログラムを表彰する、日本最大級のアワードのロゴデザインを担当しました。WEB、誌面と様々な媒体で使用することが想定されたため視認性の高さを意識し、このアワードが長年愛されるよう普遍性のあるデザインに落とし込みました。
-          </p>
-          <div class="fadein info__btn sp">
-            <a class="black-btn" href="https://internship-award.jp/">VISIT WEBSITE</a>
+          <div class="fadein s3">
+            <p class="info__desc">
+              CLIENT
+              <span class="info__desc--grey">マイナビ</span>
+            </p>
+            <div class="dotted-line"></div>
+          </div>
+          <div class="fadein s45">
+            <p class="info__desc">DESCRIPTION</p>
+            <div class="dotted-line"></div>
+            <p class="info__text">
+              学生の社会的・職業的自立に貢献したインターンシッププログラムを表彰する、日本最大級のアワードのロゴデザインを担当しました。WEB、誌面と様々な媒体で使用することが想定されたため視認性の高さを意識し、このアワードが長年愛されるよう普遍性のあるデザインに落とし込みました。
+            </p>
+          </div>
+          <div class="fadein info__btn sp s6">
+            <a class="black-btn" href="https://internship-award.jp/" target="_blank">VISIT WEBSITE</a>
           </div>
         </div>
         <div class="flex-wrap__item">
