--- a/app/works/index.html
+++ b/app/works/index.html
@@ -19,7 +19,7 @@
       <div class="border fadein-left off"></div>
       <a class="accordion-list__link" href="/about.html">
         <span class="accordion-list__text fadein-under s3">02</span>
-        <span class="accordion-list__text--primary fadein-under s3">ABOUT</span>
+        <span class="accordion-list__text--primary fadein-under s15">ABOUT</span>
         <span class="accordion-list__text fadein-under s3">MY PHILOSOPHY</span>
       </a>
       <div class="border fadein-left off"></div>
@@ -58,26 +58,32 @@
       </div>
       <div class="flex-wrap">
         <div class="info flex-wrap__item">
-          <span class="info__sub02 fadein">WEB DESIGH</span>
-          <p class="fadein info__title02 fadein">LOTTE パイの実 BRAND SITE</p>
-          <div class="fadein info__btn pc">
-            <a class="black-btn" href="https://www.lotte.co.jp/products/brand/painomi/">VISIT WEBSITE</a>
+          <div class="fadein">
+            <span class="info__sub02">WEB DESIGN</span>
+            <p class="info__title02">LOTTE パイの実 BRAND SITE</p>
+          </div>
+          <div class="fadein info__btn pc s6">
+            <a class="black-btn" href="https://www.lotte.co.jp/products/brand/painomi/" target="_blank">VISIT WEBSITE</a>
           </div>
         </div>
         <div class="info flex-wrap__item">
-          <p class="fadein info__desc">
-            CLIENT
-            <span class="fadein info__desc--grey">: LOTTE</span>
-          </p>
-          <div class="dotted-line"></div>
-          <p class="fadein info__desc">DESCRIPTION</p>
-          <div class="dotted-line"></div>
-          <p class="fadein info__text">
-            ロッテパイの実の40周年を記念した、サイトリニューアルを担当しました。<br>
-            サイトに訪れたユーザーをパイの実の森に招き入れるような世界観をイメージして制作。サイト内ではリスやパイの実のポップさキュートさをモーションで演出しています。
-          </p>
-          <div class="fadein info__btn sp">
-            <a class="black-btn" href="https://www.lotte.co.jp/products/brand/painomi/">VISIT WEBSITE</a>
+          <div class="fadein s3">
+            <p class="info__desc">
+              CLIENT
+              <span class="info__desc--grey">LOTTE</span>
+            </p>
+            <div class="dotted-line"></div>
+          </div>
+          <div class="fadein s45">
+            <p class="info__desc">DESCRIPTION</p>
+            <div class="dotted-line"></div>
+            <p class="info__text">
+              ロッテパイの実の40周年を記念した、サイトリニューアルを担当しました。<br>
+              サイトに訪れたユーザーをパイの実の森に招き入れるような世界観をイメージして制作。サイト内ではリスやパイの実のポップさキュートさをモーションで演出しています。
+            </p>
+          </div>
+          <div class="fadein info__btn sp s6">
+            <a class="black-btn" href="https://www.lotte.co.jp/products/brand/painomi/" target="_blank">VISIT WEBSITE</a>
           </div>
         </div>
         <div class="flex-wrap__item">
