--- a/app/works/itrim.html
+++ b/app/works/itrim.html
@@ -19,7 +19,7 @@
       <div class="border fadein-left off"></div>
       <a class="accordion-list__link" href="/about.html">
         <span class="accordion-list__text fadein-under s3">02</span>
-        <span class="accordion-list__text--primary fadein-under s3">ABOUT</span>
+        <span class="accordion-list__text--primary fadein-under s15">ABOUT</span>
         <span class="accordion-list__text fadein-under s3">MY PHILOSOPHY</span>
       </a>
       <div class="border fadein-left off"></div>
@@ -58,25 +58,31 @@
       </div>
       <div class="flex-wrap">
         <div class="info flex-wrap__item">
-          <span class="info__sub02 fadein">WEB DESIGH</span>
-          <p class="fadein info__title02 fadein">ITRIM</p>
-          <div class="fadein info__btn pc">
-            <a class="black-btn" href="https://www.itrimbeauty.com/brand/">VISIT WEBSITE</a>
+          <div class="fadein">
+            <span class="info__sub02">WEB DESIGN</span>
+            <p class="info__title02">ITRIM</p>
+          </div>
+          <div class="fadein info__btn pc s6">
+            <a class="black-btn" href="https://www.itrimbeauty.com/brand/" target="_blank">VISIT WEBSITE</a>
           </div>
         </div>
         <div class="info flex-wrap__item">
-          <p class="fadein info__desc">
-            CLIENT
-            <span class="fadein info__desc--grey">: ACRO</span>
-          </p>
-          <div class="dotted-line"></div>
-          <p class="fadein info__desc">DESCRIPTION</p>
-          <div class="dotted-line"></div>
-          <p class="fadein info__text">
-            本質的な美しさをもつ女性たちの凛とした美しさをブランド全体で体現したコスメブランドITRIMのサイトデザインを担当しました。緻密な計算がなされた天然素材を活かしたスキンケアのこだわりを気品のあるデザインで表現しています。
-          </p>
-          <div class="fadein info__btn sp">
-            <a class="black-btn" href="https://www.itrimbeauty.com/brand/">VISIT WEBSITE</a>
+          <div class="fadein s3">
+            <p class="info__desc">
+              CLIENT
+              <span class="info__desc--grey">ACRO</span>
+            </p>
+            <div class="dotted-line"></div>
+          </div>
+          <div class="fadein s45">
+            <p class="info__desc">DESCRIPTION</p>
+            <div class="dotted-line"></div>
+            <p class="info__text">
+              本質的な美しさをもつ女性たちの凛とした美しさをブランド全体で体現したコスメブランドITRIMのサイトデザインを担当しました。緻密な計算がなされた天然素材を活かしたスキンケアのこだわりを気品のあるデザインで表現しています。
+            </p>
+          </div>
+          <div class="fadein info__btn sp s6">
+            <a class="black-btn" href="https://www.itrimbeauty.com/brand/" target="_blank">VISIT WEBSITE</a>
           </div>
         </div>
         <div class="flex-wrap__item">
