--- a/app/works/look_feb.html
+++ b/app/works/look_feb.html
@@ -19,7 +19,7 @@
       <div class="border fadein-left off"></div>
       <a class="accordion-list__link" href="/about.html">
         <span class="accordion-list__text fadein-under s3">02</span>
-        <span class="accordion-list__text--primary fadein-under s3">ABOUT</span>
+        <span class="accordion-list__text--primary fadein-under s15">ABOUT</span>
         <span class="accordion-list__text fadein-under s3">MY PHILOSOPHY</span>
       </a>
       <div class="border fadein-left off"></div>
@@ -58,27 +58,27 @@
       </div>
       <div class="flex-wrap">
         <div class="info flex-wrap__item">
-          <span class="info__sub02 fadein">WEB DESIGH</span>
-          <p class="fadein info__title02 fadein">MAQuillAGE　LOOKBOOK</p>
-          <!-- <div class="fadein info__btn pc">
-            <a class="black-btn" href="/">VISIT WEBSITE</a>
-          </div> -->
+          <div class="fadein">
+            <span class="info__sub02">WEB DESIGN</span>
+            <p class="info__title02">MAQuillAGE　LOOKBOOK</p>
+          </div>
         </div>
         <div class="info flex-wrap__item">
-          <p class="fadein info__desc">
-            CLIENT
-            <span class="fadein info__desc--grey">: SHISEIDO</span>
-          </p>
-          <div class="dotted-line"></div>
-          <p class="fadein info__desc">DESCRIPTION</p>
-          <div class="dotted-line"></div>
-          <p class="fadein info__text">
-            "MAQuillAGEの各シーズンLOOK BOOKを担当しました。<br>
-            このシーズンでは初夏をアクティブに楽しみたい女性のバケーションを、テカリ知らずで過ごせる三種の神器の特集。グランピングとビーチをイメージした色味と初夏の木漏れ日をモチーフに全体をデザインしました。"
-          </p>
-          <!-- <div class="fadein info__btn sp">
-            <a class="black-btn" href="/">VISIT WEBSITE</a>
-          </div> -->
+          <div class="fadein s3">
+            <p class="info__desc">
+              CLIENT
+              <span class="info__desc--grey">SHISEIDO</span>
+            </p>
+            <div class="dotted-line"></div>
+          </div>
+          <div class="fadein s45">
+            <p class="info__desc">DESCRIPTION</p>
+            <div class="dotted-line"></div>
+            <p class="info__text">
+              "MAQuillAGEの各シーズンLOOK BOOKを担当しました。<br>
+              このシーズンでは初夏をアクティブに楽しみたい女性のバケーションを、テカリ知らずで過ごせる三種の神器の特集。グランピングとビーチをイメージした色味と初夏の木漏れ日をモチーフに全体をデザインしました。"
+            </p>
+          </div>
         </div>
         <div class="flex-wrap__item">
           <img class="works-img fadein" src="/assets/images/web_look_feb_01.png" alt="web_look_feb_01画像">
