--- a/app/works/millor.html
+++ b/app/works/millor.html
@@ -19,7 +19,7 @@
       <div class="border fadein-left off"></div>
       <a class="accordion-list__link" href="/about.html">
         <span class="accordion-list__text fadein-under s3">02</span>
-        <span class="accordion-list__text--primary fadein-under s3">ABOUT</span>
+        <span class="accordion-list__text--primary fadein-under s15">ABOUT</span>
         <span class="accordion-list__text fadein-under s3">MY PHILOSOPHY</span>
       </a>
       <div class="border fadein-left off"></div>
@@ -58,25 +58,31 @@
       </div>
       <div class="flex-wrap">
         <div class="info flex-wrap__item">
-          <span class="info__sub02 fadein">ILLUSTRATION</span>
-          <p class="fadein info__title02 fadein">MILLOR</p>
-          <div class="fadein info__btn pc">
-            <a class="black-btn" href="https://www.millor.jp/">VISIT WEBSITE</a>
+          <div class="fadein">
+            <span class="info__sub02">ILLUSTRATION</span>
+            <p class="info__title02">MILLOR</p>
+          </div>
+          <div class="fadein info__btn pc s6">
+            <a class="black-btn" href="https://www.millor.jp/" target="_blank">VISIT WEBSITE</a>
           </div>
         </div>
         <div class="info flex-wrap__item">
-          <p class="fadein info__desc">
-            CLIENT
-            <span class="fadein info__desc--grey">: MILLOR</span>
-          </p>
-          <div class="dotted-line"></div>
-          <p class="fadein info__desc">DESCRIPTION</p>
-          <div class="dotted-line"></div>
-          <p class="fadein info__text">
-            オーナー様のクリエイティビティーを詰め込んだサイトに合わせ、手書きの風合いを残したイラストを作成しました。美容学生に向けた採用サイトの側面もあるため親しみやすや、働きやすさが印象に残ることを重視しています。
-          </p>
-          <div class="fadein info__btn sp">
-            <a class="black-btn" href="https://www.millor.jp/">VISIT WEBSITE</a>
+          <div class="fadein s3">
+            <p class="info__desc">
+              CLIENT
+              <span class="info__desc--grey">MILLOR</span>
+            </p>
+            <div class="dotted-line"></div>
+          </div>
+          <div class="fadein s45">
+            <p class="info__desc">DESCRIPTION</p>
+            <div class="dotted-line"></div>
+            <p class="info__text">
+              オーナー様のクリエイティビティーを詰め込んだサイトに合わせ、手書きの風合いを残したイラストを作成しました。美容学生に向けた採用サイトの側面もあるため親しみやすや、働きやすさが印象に残ることを重視しています。
+            </p>
+          </div>
+          <div class="fadein info__btn sp s6">
+            <a class="black-btn" href="https://www.millor.jp/" target="_blank">VISIT WEBSITE</a>
           </div>
         </div>
         <div class="flex-wrap__item">
