--- a/app/works/namecard.html
+++ b/app/works/namecard.html
@@ -19,7 +19,7 @@
       <div class="border fadein-left off"></div>
       <a class="accordion-list__link" href="/about.html">
         <span class="accordion-list__text fadein-under s3">02</span>
-        <span class="accordion-list__text--primary fadein-under s3">ABOUT</span>
+        <span class="accordion-list__text--primary fadein-under s15">ABOUT</span>
         <span class="accordion-list__text fadein-under s3">MY PHILOSOPHY</span>
       </a>
       <div class="border fadein-left off"></div>
@@ -58,27 +58,27 @@
       </div>
       <div class="flex-wrap">
         <div class="info flex-wrap__item">
-          <span class="info__sub02 fadein">VISUAL</span>
-          <p class="fadein info__title02 fadein">名刺</p>
-          <!-- <div class="fadein info__btn pc">
-            <a class="black-btn" href="/">VISIT WEBSITE</a>
-          </div> -->
+          <div class="fadein">
+            <span class="info__sub02">VISUAL</span>
+            <p class="info__title02">名刺</p>
+          </div>
         </div>
         <div class="info flex-wrap__item">
-          <p class="fadein info__desc">
-            CLIENT
-            <span class="fadein info__desc--grey">: -</span>
-          </p>
-          <div class="dotted-line"></div>
-          <p class="fadein info__desc">DESCRIPTION</p>
-          <div class="dotted-line"></div>
-          <p class="fadein info__text">
-            両面箔押しの名刺を作成。ディープマット紙のナチュラルな風合いと万年筆で書いたような細いラインの書体で都会的でありながら親しみのある名刺を目指しました。<br>
-            消印を模したモチーフをアクセントに、デザインをしたため丹精込めてお届けするという私自身のモットーを表した名刺デザインになっています。
-          </p>
-          <!-- <div class="fadein info__btn sp">
-            <a class="black-btn" href="/">VISIT WEBSITE</a>
-          </div> -->
+          <div class="fadein s3">
+            <p class="fadein info__desc">
+              CLIENT
+              <span class="fadein info__desc--grey">-</span>
+            </p>
+            <div class="dotted-line"></div>
+          </div>
+          <div class="fadein s45">
+            <p class="info__desc">DESCRIPTION</p>
+            <div class="dotted-line"></div>
+            <p class="info__text">
+              両面箔押しの名刺を作成。ディープマット紙のナチュラルな風合いと万年筆で書いたような細いラインの書体で都会的でありながら親しみのある名刺を目指しました。<br>
+              消印を模したモチーフをアクセントに、デザインをしたため丹精込めてお届けするという私自身のモットーを表した名刺デザインになっています。
+            </p>
+          </div>
         </div>
         <div class="flex-wrap__item">
           <img class="works-img fadein" src="/assets/images/visual_namecard_01.png" alt="visual_namecard_01画像">
