--- a/app/works/q16.html
+++ b/app/works/q16.html
@@ -19,7 +19,7 @@
       <div class="border fadein-left off"></div>
       <a class="accordion-list__link" href="/about.html">
         <span class="accordion-list__text fadein-under s3">02</span>
-        <span class="accordion-list__text--primary fadein-under s3">ABOUT</span>
+        <span class="accordion-list__text--primary fadein-under s15">ABOUT</span>
         <span class="accordion-list__text fadein-under s3">MY PHILOSOPHY</span>
       </a>
       <div class="border fadein-left off"></div>
@@ -58,26 +58,32 @@
       </div>
       <div class="flex-wrap">
         <div class="info flex-wrap__item">
-          <span class="info__sub02 fadein">WEB DESIGH</span>
-          <p class="fadein info__title02 fadein">Q16GiRL</p>
-          <div class="fadein info__btn pc">
-            <a class="black-btn" href="https://q16girl.tokyo/">VISIT WEBSITE</a>
+          <div class="fadein">
+            <span class="info__sub02">WEB DESIGN</span>
+            <p class="info__title02">Q16GiRL</p>
+          </div>
+          <div class="fadein info__btn pc s6">
+            <a class="black-btn" href="https://q16girl.tokyo/" target="_blank">VISIT WEBSITE</a>
           </div>
         </div>
         <div class="info flex-wrap__item">
-          <p class="fadein info__desc">
-            CLIENT
-            <span class="fadein info__desc--grey">: QT by quark tokyo</span>
-          </p>
-          <div class="dotted-line"></div>
-          <p class="fadein info__desc">DESCRIPTION</p>
-          <div class="dotted-line"></div>
-          <p class="fadein info__text">
-            女の子による女の子のための動画メディアレーベルQ16
-            GIRLのサービスデザインを担当しました。TVを見ない、雑誌も読まなくなった10代〜20代女子に向けた、オシャレで可愛い女の子たちの動画メディアレーベルをコンセプトにビビットな配色と大胆な構成を用いて利用する側も気分が上がるサービスを目指しました。
-          </p>
-          <div class="fadein info__btn sp">
-            <a class="black-btn" href="https://q16girl.tokyo/">VISIT WEBSITE</a>
+          <div class="fadein s45">
+            <p class="info__desc">
+              CLIENT
+              <span class="info__desc--grey">QT by quark tokyo</span>
+            </p>
+            <div class="dotted-line"></div>
+          </div>
+          <div class="fadein s45">
+            <p class="info__desc">DESCRIPTION</p>
+            <div class="dotted-line"></div>
+            <p class="info__text">
+              女の子による女の子のための動画メディアレーベルQ16
+              GIRLのサービスデザインを担当しました。TVを見ない、雑誌も読まなくなった10代〜20代女子に向けた、オシャレで可愛い女の子たちの動画メディアレーベルをコンセプトにビビットな配色と大胆な構成を用いて利用する側も気分が上がるサービスを目指しました。
+            </p>
+          </div>
+          <div class="fadein info__btn sp s6">
+            <a class="black-btn" href="https://q16girl.tokyo/" target="_blank">VISIT WEBSITE</a>
           </div>
         </div>
         <div class="flex-wrap__item">
