--- a/app/works/rouge.html
+++ b/app/works/rouge.html
@@ -19,7 +19,7 @@
       <div class="border fadein-left off"></div>
       <a class="accordion-list__link" href="/about.html">
         <span class="accordion-list__text fadein-under s3">02</span>
-        <span class="accordion-list__text--primary fadein-under s3">ABOUT</span>
+        <span class="accordion-list__text--primary fadein-under s15">ABOUT</span>
         <span class="accordion-list__text fadein-under s3">MY PHILOSOPHY</span>
       </a>
       <div class="border fadein-left off"></div>
@@ -58,27 +58,27 @@
       </div>
       <div class="flex-wrap">
         <div class="info flex-wrap__item">
-          <span class="info__sub02 fadein">ILLUSTRATION</span>
-          <p class="fadein info__title02 fadein">MAQuillAGE ルージュミニ</p>
-          <!-- <div class="fadein info__btn pc">
-            <a class="black-btn" href="/">VISIT WEBSITE</a>
-          </div> -->
+          <div class="fadein">
+            <span class="info__sub02">ILLUSTRATION</span>
+            <p class="info__title02">MAQuillAGE ルージュミニ</p>
+          </div>
         </div>
         <div class="info flex-wrap__item">
-          <p class="fadein info__desc">
-            CLIENT
-            <span class="fadein info__desc--grey">: SHISEIDO</span>
-          </p>
-          <div class="dotted-line"></div>
-          <p class="fadein info__desc">DESCRIPTION</p>
-          <div class="dotted-line"></div>
-          <p class="fadein info__text">
-            肌タイプ別に12種類のルージュを組み合わせて楽しむミニルージュの診断イラストを担当しました。<br>
-            目の醒めるようなビビットな色合いと、夜のバーを想像させるサイトデザインに合わせ、ネオン菅をモチーフに12タイプの診断イラストとSNSでのシェア画像を作成しました。
-          </p>
-          <!-- <div class="fadein info__btn sp">
-            <a class="black-btn" href="/">VISIT WEBSITE</a>
-          </div> -->
+          <div class="fadein s3">
+            <p class="info__desc">
+              CLIENT
+              <span class="info__desc--grey">SHISEIDO</span>
+            </p>
+            <div class="dotted-line"></div>
+          </div>
+          <div class="fadein s45">
+            <p class="info__desc">DESCRIPTION</p>
+            <div class="dotted-line"></div>
+            <p class="info__text">
+              肌タイプ別に12種類のルージュを組み合わせて楽しむミニルージュの診断イラストを担当しました。<br>
+              目の醒めるようなビビットな色合いと、夜のバーを想像させるサイトデザインに合わせ、ネオン菅をモチーフに12タイプの診断イラストとSNSでのシェア画像を作成しました。
+            </p>
+          </div>
         </div>
         <div class="flex-wrap__item">
           <img class="works-img fadein" src="/assets/images/illust_rouge_01.png" alt="illust_rouge_01画像">
