--- a/app/works/syncstock.html
+++ b/app/works/syncstock.html
@@ -19,7 +19,7 @@
       <div class="border fadein-left off"></div>
       <a class="accordion-list__link" href="/about.html">
         <span class="accordion-list__text fadein-under s3">02</span>
-        <span class="accordion-list__text--primary fadein-under s3">ABOUT</span>
+        <span class="accordion-list__text--primary fadein-under s15">ABOUT</span>
         <span class="accordion-list__text fadein-under s3">MY PHILOSOPHY</span>
       </a>
       <div class="border fadein-left off"></div>
@@ -58,27 +58,27 @@
       </div>
       <div class="flex-wrap">
         <div class="info flex-wrap__item">
-          <span class="info__sub02 fadein">WEB DESIGH</span>
-          <p class="fadein info__title02 fadein">syncstock</p>
-          <!-- <div class="fadein info__btn pc">
-            <a class="black-btn" href="/">VISIT WEBSITE</a>
-          </div> -->
+          <div class="fadein">
+            <span class="info__sub02">WEB DESIGN</span>
+            <p class="info__title02">syncstock</p>
+          </div>
         </div>
         <div class="info flex-wrap__item">
-          <p class="fadein info__desc">
-            CLIENT
-            <span class="fadein info__desc--grey">: -</span>
-          </p>
-          <div class="dotted-line"></div>
-          <p class="fadein info__desc">DESCRIPTION</p>
-          <div class="dotted-line"></div>
-          <p class="fadein info__text">
-            プレゼンテーションなど社内のナレッジを音声と共に残すことができる新しい情報管理サービスsyncstockのサービスサイトを作成しました。<br>
-            ファーストビューには動画を使用し直感的にサービスを理解できる仕様。またスライドをイメージした斜めのラインを使用することで伝達スピードの速さを表しています。
-          </p>
-          <!-- <div class="fadein info__btn sp">
-            <a class="black-btn" href="/">VISIT WEBSITE</a>
-          </div> -->
+          <div class="fadein s3">
+            <p class="info__desc">
+              CLIENT
+              <span class="info__desc--grey">-</span>
+            </p>
+            <div class="dotted-line"></div>
+          </div>
+          <div class="fadein s45">
+            <p class="info__desc">DESCRIPTION</p>
+            <div class="dotted-line"></div>
+            <p class="info__text">
+              プレゼンテーションなど社内のナレッジを音声と共に残すことができる新しい情報管理サービスsyncstockのサービスサイトを作成しました。<br>
+              ファーストビューには動画を使用し直感的にサービスを理解できる仕様。またスライドをイメージした斜めのラインを使用することで伝達スピードの速さを表しています。
+            </p>
+          </div>
         </div>
         <div class="flex-wrap__item">
           <img class="works-img fadein" src="/assets/images/web_syncstock_01.png" alt="web_syncstock01画像">
