スタイル修正0520

--- a/app/about.html
+++ b/app/about.html
@@ -45,7 +45,7 @@
   </header>
   <main class="main">
     <div class="flex-layout">
-      <div class="sidemenu flex-layout__side">
+      <div class="sidemenu flex-layout__left">
         <span class="sidemenu__link" >
           <a class="sidemenu__text" href="/">WORKS</a>
         </span>
@@ -58,7 +58,7 @@
           <span class="sidemenu__text active">ABOUT</span>
         </span>
       </div>
-      <div class="main-visual flex-layout__main">
+      <div class="main-visual flex-layout__about">
         <div class="main-visual__section">
           <img class="main-visual__img" src="./assets/images/sky.jpg" alt="空画像">
         </div>
