--- a/app/index.html
+++ b/app/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ja">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,6 +8,7 @@
   <link rel="stylesheet" href="./css/style.css">
   <title>Document</title>
 </head>
+
 <body>
   <div class="cursor"></div>
   <div class="mask">
@@ -47,203 +49,147 @@
       <span class="menu-icon__bar"></span>
     </div>
   </header>
-  <main class="main">
-    <div class="sidemenu sidemenu--fix">
-        <span class="sidemenu__link">
-          <span class="sidemenu__text active">WORKS</span>
-        </span>
-        <span class="sidemenu__link">
-          <span class="sidemenu__text-min active">WEB DESIGN</span>
-          <span class="sidemenu__text-min">LOGO / ILLUSTRATION</span>
-          <span class="sidemenu__text-min">VISUAL DESIGN</span>
-        </span>
-        <span class="sidemenu__link active">
-          <a class="sidemenu__text" href="/about.html">ABOUT</a>
-        </span>
+  <main class="main flex-layout flex-layout--center">
+    <div class="sidemenu flex-layout__left">
+      <span class="sidemenu__link">
+        <span class="sidemenu__text active">WORKS</span>
+      </span>
+      <span class="sidemenu__link">
+        <span class="sidemenu__text-min active">WEB DESIGN</span>
+        <span class="sidemenu__text-min">LOGO / ILLUSTRATION</span>
+        <span class="sidemenu__text-min">VISUAL DESIGN</span>
+      </span>
+      <span class="sidemenu__link active">
+        <a class="sidemenu__text" href="/about.html">ABOUT</a>
+      </span>
     </div>
-    <div class="main-fix">
+    <div class="main-fix flex-layout__main" id="mainFix">
       <div class="top-visual">
         <div class="top-visual__inner">
           <a href="/works/">
             <img class="top-visual__img" src="./assets/images/pc_pie.jpg" alt="メインのパイの実画像">
           </a>
-          <div class="top-visual__link">
-            <a class="visual-link" href="/works/index.html">
-              <span class="visual-link__text--grey">WEB</span>
-              <span class="visual-link__text">LOTTE パイの実 BRAND SITE</span>
-            </a>
-          </div>
-        </div>
-      </div>
-      <div class="top-visual">
-        <div class="top-visual__inner">
           <a href="/works/look_apr.html">
             <img class="top-visual__img" src="./assets/images/pc_look_apr.png" alt="MAQuillAGE　LOOKBOOK画像">
           </a>
-          <div class="top-visual__link">
-            <a class="visual-link" href="/works/look_apr.html">
-              <span class="visual-link__text--grey">WEB</span>
-              <span class="visual-link__text">MAQuillAGE　LOOKBOOK</span>
-            </a>
-          </div>
-        </div>
-      </div>
-      <div class="top-visual">
-        <div class="top-visual__inner">
+
           <a href="/works/look_feb.html">
             <img class="top-visual__img" src="./assets/images/pc_look_feb.png" alt="MAQuillAGE　LOOKBOOK画像">
           </a>
-          <div class="top-visual__link">
-            <a class="visual-link" href="/works/look_feb.html">
-              <span class="visual-link__text--grey">WEB</span>
-              <span class="visual-link__text">MAQuillAGE　LOOKBOOK</span>
-            </a>
-          </div>
-        </div>
-      </div>
-      <div class="top-visual">
-        <div class="top-visual__inner">
+
           <a href="/works/q16.html">
             <img class="top-visual__img" src="./assets/images/pc_q16.png" alt="Q16GiRL画像">
           </a>
-          <div class="top-visual__link">
-            <a class="visual-link" href="/works/q16.html">
-              <span class="visual-link__text--grey">WEB</span>
-              <span class="visual-link__text">Q16GiRL</span>
-            </a>
-          </div>
-        </div>
-      </div>
-      <div class="top-visual">
-        <div class="top-visual__inner">
+
           <a href="/works/bvlgari.html">
-            <img class="top-visual__img" src="./assets/images/pc_bvlgari.png" alt="LINE  MOOK in PINK HAPPY SECRET by BVLGARI画像">
+            <img class="top-visual__img" src="./assets/images/pc_bvlgari.png"
+              alt="LINE  MOOK in PINK HAPPY SECRET by BVLGARI画像">
           </a>
-          <div class="top-visual__link">
-            <a class="visual-link" href="/works/bvlgari.html">
-              <span class="visual-link__text--grey">WEB</span>
-              <span class="visual-link__text">
-                LINE MOOK "in PINK HAPPY SECRET by BVLGARI"
-              </span>
-            </a>
-          </div>
-        </div>
-      </div>
-      <div class="top-visual">
-        <div class="top-visual__inner">
+
           <a href="/works/itrim.html">
             <img class="top-visual__img" src="./assets/images/pc_itrim.png" alt="itrim画像">
           </a>
-          <div class="top-visual__link">
-            <a class="visual-link" href="/works/itrim.html">
-              <span class="visual-link__text--grey">WEB</span>
-              <span class="visual-link__text">ITRIM</span>
-            </a>
-          </div>
-        </div>
-      </div>
-      <div class="top-visual">
-        <div class="top-visual__inner">
+
           <a href="/works/syncstock.html">
             <img class="top-visual__img" src="./assets/images/pc_syncstock.png" alt="syncstock画像">
           </a>
-          <div class="top-visual__link">
-            <a class="visual-link" href="/works/syncstock.html">
-              <span class="visual-link__text--grey">WEB</span>
-              <span class="visual-link__text">syncstock</span>
-            </a>
-          </div>
-        </div>
-      </div>
-      <div class="top-visual">
-        <div class="top-visual__inner">
+
           <a href="/works/award.html">
             <img class="top-visual__img" src="./assets/images/pc_award.png" alt="INTERNSHIP AWARD画像">
           </a>
-          <div class="top-visual__link">
-            <a class="visual-link" href="/works/award.html">
-              <span class="visual-link__text--grey">LOGO</span>
-              <span class="visual-link__text">INTERNSHIP AWARD</span>
-            </a>
-          </div>
-        </div>
-      </div>
-      <div class="top-visual">
-        <div class="top-visual__inner">
+
           <a href="/works/amg.html">
             <img class="top-visual__img" src="./assets/images/pc_amg.png" alt="AMG solution画像">
           </a>
-          <div class="top-visual__link">
-            <a class="visual-link" href="/works/amg.html">
-              <span class="visual-link__text--grey">LOGO</span>
-              <span class="visual-link__text">AMG solution</span>
-            </a>
-          </div>
-        </div>
-      </div>
-      <div class="top-visual">
-        <div class="top-visual__inner">
+
           <a href="/works/rouge.html">
             <img class="top-visual__img" src="./assets/images/pc_rouge.png" alt="MAQuillAGE ルージュミニ画像">
           </a>
-          <div class="top-visual__link">
-            <a class="visual-link" href="/works/rouge.html">
-              <span class="visual-link__text--grey">ILLUSTRATION</span>
-              <span class="visual-link__text">MAQuillAGE ルージュミニ</span>
-            </a>
-          </div>
-        </div>
-      </div>
-      <div class="top-visual">
-        <div class="top-visual__inner">
+
           <a href="/works/inupathy.html">
             <img class="top-visual__img" src="./assets/images/pc_inupathy.png" alt="inupathy画像">
           </a>
-          <div class="top-visual__link">
-            <a class="visual-link" href="/works/inupathy.html">
-              <span class="visual-link__text--grey">ILLUSTRATION</span>
-              <span class="visual-link__text">inupathy</span>
-            </a>
-          </div>
-        </div>
-      </div>
-      <div class="top-visual">
-        <div class="top-visual__inner">
+
           <a href="/works/millor.html">
             <img class="top-visual__img" src="./assets/images/pc_millor.png" alt="MILLOR画像">
           </a>
-          <div class="top-visual__link">
-            <a class="visual-link" href="/works/millor.html">
-              <span class="visual-link__text--grey">ILLUSTRATION</span>
-              <span class="visual-link__text">MILLOR</span>
-            </a>
-          </div>
-        </div>
-      </div>
-      <div class="top-visual">
-        <div class="top-visual__inner">
+
           <a href="/works/namecard.html">
             <img class="top-visual__img" src="./assets/images/pc_namecard.png" alt="名刺">
           </a>
-          <div class="top-visual__link">
-            <a class="visual-link" href="/works/namecard.html">
-              <span class="visual-link__text--grey">VISUAL</span>
-              <span class="visual-link__text">名刺</span>
-            </a>
-          </div>
         </div>
       </div>
     </div>
-    <div class="scroll-now sidemenu-fix-right">
+    <div class="scroll-now flex-layout__right">
       <span class="scroll-now__item" id="prevNum"></span>
       <span class="scroll-now__item--current" id="currentNum"></span>
       <span class="scroll-now__divider"></span>
       <span class="scroll-now__item--current" id="totalNum"></span>
       <span class="scroll-now__item" id="nextNum"></span>
     </div>
+    <div class="visual-link-fix flex-layout__item-100">
+      <div class="visual-link-wrap">
+        <a class="visual-link" href="/works/index.html">
+          <span class="visual-link__text--grey">WEB</span>
+          <span class="visual-link__text">LOTTE パイの実 BRAND SITE</span>
+        </a>
+        <a class="visual-link" href="/works/look_apr.html">
+          <span class="visual-link__text--grey">WEB</span>
+          <span class="visual-link__text">MAQuillAGE　LOOKBOOK</span>
+        </a>
+        <a class="visual-link" href="/works/look_feb.html">
+          <span class="visual-link__text--grey">WEB</span>
+          <span class="visual-link__text">MAQuillAGE　LOOKBOOK</span>
+        </a>
+        <a class="visual-link" href="/works/q16.html">
+          <span class="visual-link__text--grey">WEB</span>
+          <span class="visual-link__text">Q16GiRL</span>
+        </a>
+        <a class="visual-link" href="/works/bvlgari.html">
+          <span class="visual-link__text--grey">WEB</span>
+          <span class="visual-link__text">
+            LINE MOOK "in PINK HAPPY SECRET by BVLGARI"
+          </span>
+        </a>
+        <a class="visual-link" href="/works/itrim.html">
+          <span class="visual-link__text--grey">WEB</span>
+          <span class="visual-link__text">ITRIM</span>
+        </a>
+        <a class="visual-link" href="/works/syncstock.html">
+          <span class="visual-link__text--grey">WEB</span>
+          <span class="visual-link__text">syncstock</span>
+        </a>
+        <a class="visual-link" href="/works/award.html">
+          <span class="visual-link__text--grey">LOGO</span>
+          <span class="visual-link__text">INTERNSHIP AWARD</span>
+        </a>
+        <a class="visual-link" href="/works/amg.html">
+          <span class="visual-link__text--grey">LOGO</span>
+          <span class="visual-link__text">AMG solution</span>
+        </a>
+        <a class="visual-link" href="/works/rouge.html">
+          <span class="visual-link__text--grey">ILLUSTRATION</span>
+          <span class="visual-link__text">MAQuillAGE ルージュミニ</span>
+        </a>
+        <a class="visual-link" href="/works/inupathy.html">
+          <span class="visual-link__text--grey">ILLUSTRATION</span>
+          <span class="visual-link__text">inupathy</span>
+        </a>
+        <a class="visual-link" href="/works/millor.html">
+          <span class="visual-link__text--grey">ILLUSTRATION</span>
+          <span class="visual-link__text">MILLOR</span>
+        </a>
+        <a class="visual-link" href="/works/namecard.html">
+          <span class="visual-link__text--grey">VISUAL</span>
+          <span class="visual-link__text">名刺</span>
+        </a>
+      </div>
+    </div>
   </main>
   <footer></footer>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="./js/main.js"></script>
+  <script src="./js/scroll.js"></script>
 </body>
+
 </html>
