スタイル修正0521

--- a/app/about.html
+++ b/app/about.html
@@ -45,7 +45,7 @@
   </header>
   <main class="main">
     <div class="flex-layout">
-      <div class="sidemenu flex-layout__left">
+      <div class="sidemenu flex-layout__about-l">
         <span class="sidemenu__link" >
           <a class="sidemenu__text" href="/">WORKS</a>
         </span>
