--- a/app/index.html
+++ b/app/index.html
@@ -52,7 +52,7 @@
   <main class="main flex-layout flex-layout--center">
     <div class="sidemenu flex-layout__left">
       <span class="sidemenu__link">
-        <span class="sidemenu__text active">WORKS</span>
+        <a class="sidemenu__text active" href="/works/index.html">WORKS</a>
       </span>
       <span class="sidemenu__link">
         <span class="sidemenu__text-min active">WEB DESIGN</span>
@@ -121,11 +121,11 @@
       </div>
     </div>
     <div class="scroll-now flex-layout__right">
-      <span class="scroll-now__item" id="prevNum"></span>
-      <span class="scroll-now__item--current" id="currentNum"></span>
-      <span class="scroll-now__divider"></span>
-      <span class="scroll-now__item--current" id="totalNum"></span>
-      <span class="scroll-now__item" id="nextNum"></span>
+      <a class="scroll-now__item" id="prevNum" href="javascript:void(0)"></a>
+      <a class="scroll-now__item--current" id="currentNum" href="javascript:void(0)"></a>
+      <a class="scroll-now__divider"></a>
+      <a class="scroll-now__item--current" id="totalNum" href="javascript:void(0)"></a>
+      <a class="scroll-now__item" id="nextNum" href="javascript:void(0)"></a>
     </div>
     <div class="visual-link-fix flex-layout__item-100">
       <div class="visual-link-wrap">
