--- a/app/works/bvlgari.html
+++ b/app/works/bvlgari.html
@@ -72,8 +72,7 @@
         <div class="info flex-wrap__item">
           <div class="fadein s3">
             <p class="info__desc">
-              CLIENT
-              <span class="info__desc--grey">婦人画報</span>
+              CLIENT<span class="info__desc--grey">婦人画報</span>
             </p>
             <div class="dotted-line"></div>
           </div>
