--- a/app/works/namecard.html
+++ b/app/works/namecard.html
@@ -59,15 +59,14 @@
       <div class="flex-wrap">
         <div class="info flex-wrap__item">
           <div class="fadein">
-            <span class="info__sub02">VISUAL</span>
-            <p class="info__title02">名刺</p>
+            <span class="info__sub02">VISUAL DESIGH</span>
+            <p class="info__title02">2020年 名刺デザイン</p>
           </div>
         </div>
         <div class="info flex-wrap__item">
           <div class="fadein s3">
             <p class="fadein info__desc">
-              CLIENT
-              <span class="fadein info__desc--grey">-</span>
+              CLIENT<span class="fadein info__desc--grey">-</span>
             </p>
             <div class="dotted-line"></div>
           </div>
@@ -93,7 +92,7 @@
     <div class="flex-center">
       <a class="white-stroked-btn left" href="/">BACK TO TOP</a>
       <div class="separate"></div>
-      <a class="white-stroked-btn right" href="/works/index.html">NEXT PROJECT</a>
+      <a class="white-stroked-btn right" href="/about.html">ABOUT</a>
     </div>
   </footer>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
