--- a/app/works/syncstock.html
+++ b/app/works/syncstock.html
@@ -66,8 +66,7 @@
         <div class="info flex-wrap__item">
           <div class="fadein s3">
             <p class="info__desc">
-              CLIENT
-              <span class="info__desc--grey">-</span>
+              CLIENT<span class="info__desc--grey">-</span>
             </p>
             <div class="dotted-line"></div>
           </div>
