--- a/app/works/itrim.html
+++ b/app/works/itrim.html
@@ -69,8 +69,7 @@
         <div class="info flex-wrap__item">
           <div class="fadein s3">
             <p class="info__desc">
-              CLIENT
-              <span class="info__desc--grey">ACRO</span>
+              CLIENT<span class="info__desc--grey">ACRO</span>
             </p>
             <div class="dotted-line"></div>
           </div>
