スタイル修正0522

--- a/app/index.html
+++ b/app/index.html
@@ -52,12 +52,12 @@
   <main class="main flex-layout flex-layout--center">
     <div class="sidemenu flex-layout__left">
       <span class="sidemenu__link">
-        <a class="sidemenu__text active" href="/works/index.html">WORKS</a>
+        <a class="sidemenu__text active" href="javascript:void(0)">WORKS</a>
       </span>
       <span class="sidemenu__link">
-        <span class="sidemenu__text-min active">WEB DESIGN</span>
-        <span class="sidemenu__text-min">LOGO / ILLUSTRATION</span>
-        <span class="sidemenu__text-min">VISUAL DESIGN</span>
+        <a class="sidemenu__text-min active" href="javascript:void(0)">WEB DESIGN</a>
+        <a class="sidemenu__text-min" href="javascript:void(0)">LOGO / ILLUSTRATION</a>
+        <a class="sidemenu__text-min" href="javascript:void(0)">VISUAL DESIGN</a>
       </span>
       <span class="sidemenu__link active">
         <a class="sidemenu__text" href="/about.html">ABOUT</a>
