--- a/app/works/bvlgari.html
+++ b/app/works/bvlgari.html
@@ -62,8 +62,7 @@
             <span class="info__sub02">WEB DESIGN</span>
             <p class="info__title02">
               LINE MOOK "in PINK HAPPY <br>
-              SECRET <br>
-              by BVLGARI"</p>
+              SECRET by BVLGARI"</p>
           </div>
           <div class="fadein info__btn pc s6">
             <a class="black-btn" href="https://lin.ee/gGxdnA8?utm_source=clipboard&utm_medium=share&utm_campaign=none" target="_blank">VISIT WEBSITE</a>
