--- a/app/works/inupathy.html
+++ b/app/works/inupathy.html
@@ -77,9 +77,9 @@
             <p class="info__desc">DESCRIPTION</p>
             <div class="dotted-line"></div>
             <p class="info__text">
-              "「思いやりのきっかけをコミュニケーションデバイスで」
+              「思いやりのきっかけをコミュニケーションデバイスで」
               喜びやストレスといったパートナーの発する日々の小さなメッセージから互いの理解と愛情を深めるデバイスinupathyのイラストを制作しました。<br>
-              パートナーの状態を可視化するという新しい技術をより親しみやすく受け取って貰えるイラストとなっています。"
+              パートナーの状態を可視化するという新しい技術をより親しみやすく受け取って貰えるイラストとなっています。
             </p>
           </div>
           <div class="fadein info__btn sp s6">
