--- a/app/works/look_feb.html
+++ b/app/works/look_feb.html
@@ -74,8 +74,8 @@
             <p class="info__desc">DESCRIPTION</p>
             <div class="dotted-line"></div>
             <p class="info__text">
-              "MAQuillAGEの各シーズンLOOK BOOKを担当しました。<br>
-              このシーズンでは初夏をアクティブに楽しみたい女性のバケーションを、テカリ知らずで過ごせる三種の神器の特集。グランピングとビーチをイメージした色味と初夏の木漏れ日をモチーフに全体をデザインしました。"
+              MAQuillAGEの各シーズンLOOK BOOKを担当しました。<br>
+              このシーズンでは初夏をアクティブに楽しみたい女性のバケーションを、テカリ知らずで過ごせる三種の神器の特集。グランピングとビーチをイメージした色味と初夏の木漏れ日をモチーフに全体をデザインしました。
             </p>
           </div>
         </div>
