--- a/app/works/index.html
+++ b/app/works/index.html
@@ -109,8 +109,8 @@
       </div>
     </div>
   </main>
-  <footer class="footer fadein">
-    <div class="flex-center">
+  <footer class="footer">
+    <div class="flex-center fadein">
       <a class="white-stroked-btn left" href="/">BACK TO TOP</a>
       <div class="separate"></div>
       <a class="white-stroked-btn right" href="/works/look_apr.html">NEXT PROJECT</a>
