スタイル修正0522 2nd

--- a/app/works/syncstock.html
+++ b/app/works/syncstock.html
@@ -88,8 +88,8 @@
       </div>
     </div>
   </main>
-  <footer class="footer fadein">
-    <div class="flex-center">
+  <footer class="footer">
+    <div class="flex-center fadein">
       <a class="white-stroked-btn left" href="/">BACK TO TOP</a>
       <div class="separate"></div>
       <a class="white-stroked-btn right" href="/works/award.html">NEXT PROJECT</a>
