--- a/app/works/award.html
+++ b/app/works/award.html
@@ -108,8 +108,8 @@
       </div>
     </div> -->
   </main>
-  <footer class="footer fadein">
-    <div class="flex-center">
+  <footer class="footer">
+    <div class="flex-center fadein">
       <a class="white-stroked-btn left" href="/">BACK TO TOP</a>
       <div class="separate"></div>
       <a class="white-stroked-btn right" href="/works/amg.html">NEXT PROJECT</a>
