スタイル修正0523

--- a/app/works/bvlgari.html
+++ b/app/works/bvlgari.html
@@ -61,8 +61,8 @@
           <div class="fadein">
             <span class="info__sub02">WEB DESIGN</span>
             <p class="info__title02">
-              LINE MOOK "in PINK HAPPY <br>
-              SECRET by BVLGARI"</p>
+              LINE MOOK "in PINK HAPPY SECRET <br>
+              by BVLGARI"</p>
           </div>
           <div class="fadein info__btn pc s6">
             <a class="black-btn" href="https://lin.ee/gGxdnA8?utm_source=clipboard&utm_medium=share&utm_campaign=none" target="_blank">VISIT WEBSITE</a>
